--- a/Front-End/aula 007/atividade_par_impar/index.html
+++ b/Front-End/aula 007/atividade_par_impar/index.html
@@ -14,13 +14,31 @@
         background-color: #d1d1d1;
       }
 
+      h2 {
+        text-transform: uppercase;
+         font-size: 16px;
+        font-weight: 200;
+        letter-spacing: 1px;
+        padding: 13px 20px 13px;
+        outline: 0;
+        border: 1px solid rgb(0, 0, 0);
+        cursor: pointer;
+        position: relative;
+        background-color: rgba(0, 0, 0, 0);
+      }
       p {
-        background-color: #fff;
+        font-size: 13.0px;
+        font-weight: 200;
+        letter-spacing: 1px;
+        padding: 13px 20px 13px;
+        outline: 0;
+        border: 1px solid rgb(0, 0, 0);
+        cursor: pointer;
+        position: relative;
+        background-color: rgba(0, 0, 0, 0);
       }
 
-      a{
-        
-      }
+      
       .dados {
         background-color: #494949;
         width: 20%;
@@ -29,7 +47,7 @@
         text-align: center;
         position: relative;
         left: 38%;
-        margin-top: 16%;
+        margin-top: 9%;
         border-radius: 8px;
         box-shadow: rgba(0, 0, 0, 0.4) 5px 5px, rgba(0, 0, 0, 0.3) 10px 10px,
           rgba(0, 0, 0, 0.2) 15px 15px, rgba(14, 14, 14, 0.1) 20px 20px,
@@ -49,7 +67,7 @@
         user-select: none;
         -webkit-user-select: none;
         touch-action: manipulation;
-        margin-left: 43%;
+        margin-left: 42%;
         margin-top: 3%;
         font-family: "Lato", sans-serif;
       }
@@ -71,6 +89,18 @@
         left: 0px;
       }
 
+      .button-2 {
+        font-size: 14px;
+        width: 100%;
+        font-weight: 200;
+        letter-spacing: 1px;
+        padding: 13px 20px 13px;
+        outline: 0;
+        border: 1px solid rgb(0, 0, 0);
+        cursor: pointer;
+        position: relative;
+        background-color: rgba(0, 0, 0, 0);
+      }
       @media (min-width: 768px) {
         .button-52 {
           padding: 13px 50px 13px;
